build_verification_v5.log
/Users/hectorgarcia/LYO_Da_ONE/Sources/Models/CommunityDTOs.swift:158:13: error: expressions are not allowed at the top level
            totalLessonsCompleted: sellerTotalLessonsCompleted,
            ^
/Users/hectorgarcia/LYO_Da_ONE/Sources/Models/CommunityDTOs.swift:158:34: error: consecutive statements on a line must be separated by ';'
            totalLessonsCompleted: sellerTotalLessonsCompleted,
                                 ^
                                 ;
/Users/hectorgarcia/LYO_Da_ONE/Sources/Models/CommunityDTOs.swift:158:34: error: expected expression
            totalLessonsCompleted: sellerTotalLessonsCompleted,
                                 ^
/Users/hectorgarcia/LYO_Da_ONE/Sources/Models/CommunityDTOs.swift:161:5: error: extraneous '}' at top level
    }
    ^
    
/Users/hectorgarcia/LYO_Da_ONE/Sources/Models/CommunityDTOs.swift:162:1: error: extraneous '}' at top level
}
^
/Users/hectorgarcia/LYO_Da_ONE/Sources/Models/CommunityDTOs.swift:158:13: error: Expressions are not allowed at the top level
            totalLessonsCompleted: sellerTotalLessonsCompleted,
            ^ (in target 'Lyo' from project 'Lyo')
/Users/hectorgarcia/LYO_Da_ONE/Sources/Models/CommunityDTOs.swift:158:34: error: Consecutive statements on a line must be separated by ';'
            totalLessonsCompleted: sellerTotalLessonsCompleted,
                                 ^
                                 ; (in target 'Lyo' from project 'Lyo')
/Users/hectorgarcia/LYO_Da_ONE/Sources/Models/CommunityDTOs.swift:158:34: error: Expected expression
            totalLessonsCompleted: sellerTotalLessonsCompleted,
                                 ^ (in target 'Lyo' from project 'Lyo')
/Users/hectorgarcia/LYO_Da_ONE/Sources/Models/CommunityDTOs.swift:161:5: error: Extraneous '}' at top level
    }
    ^
     (in target 'Lyo' from project 'Lyo')
/Users/hectorgarcia/LYO_Da_ONE/Sources/Models/CommunityDTOs.swift:162:1: error: Extraneous '}' at top level
}
^ (in target 'Lyo' from project 'Lyo')
** BUILD FAILED **

